--- a/app/src/main/res/values-is-rIS/strings.xml
+++ b/app/src/main/res/values-is-rIS/strings.xml
@@ -23,10 +23,13 @@
     <string name="x_add_folder">Add folder</string>
     <string name="x_add_label">Add label</string>
     <string name="x_days">Dagar</string>
+    <string name="x_done">Done</string>
+    <string name="x_edit">Edit</string>
     <string name="x_folders">Möppur</string>
     <string name="x_hours">Klukkustundir</string>
     <string name="x_labels">Merkingar</string>
     <string name="x_more">Meira</string>
+    <string name="x_none">None</string>
     <string name="x_search">Leita</string>
     <string name="x_set">Stilla</string>
     <string name="x_0">0</string>
@@ -49,7 +52,7 @@
     <string name="composer_subject">Viðfangsefni:</string>
     <string name="composer_to">Til:</string>
     <string name="set_msg_password_title">Stilltu lykilorð</string>
-    <string name="set_msg_password_info">Settu lykilorð til að dulrita þessi skilaboð fyrir notendur sem ekki nota ProtonMail. <a href="https://protonmail.com/support/knowledge-base/encrypt-for-outise-users/">Kanna nánar</a>
+    <string name="set_msg_password_info">Set a password to encrypt this message for non-protonmail users. <a href="https://protonmail.com/support/knowledge-base/encrypt-for-outside-users/">Learn more</a>
     </string>
     <string name="set_msg_password_info_icon_description">Upplýsingar</string>
     <string name="set_msg_password_msg_password_title">Lykilorð skilaboða</string>
@@ -73,6 +76,7 @@
     <string name="set_msg_expiration_check_description">Þetta atriði er merkt</string>
     <!-- endregion -->
     <!-- region Settings -->
+    <string name="settings_theme_title">Theme</string>
     <string name="settings_create_pin_code_title">Setja PIN-númer</string>
     <string name="settings_confirm_pin_code_title">Endurtaka PIN-númer</string>
     <string name="settings_pins_dont_match">PIN-númerin verða að samsvara!</string>
@@ -80,11 +84,29 @@
     <string name="settings_swipe_settings_info">Setja upp strokubendingar til að nota við mest notuðu aðgerðir.</string>
     <string name="settings_swipe_left_to_right">Vinstri til hægri</string>
     <string name="settings_swipe_right_to_left">Hægri til vinstri</string>
+    <!-- endregion -->
+    <!-- region App Theme -->
+    <string name="app_theme_title">App theme</string>
+    <string name="app_theme_light">Light</string>
+    <string name="app_theme_dark">Dark</string>
+    <string name="app_theme_system">System default</string>
+    <!-- endregion -->
+    <!-- region Labels Manger -->
+    <string name="labels_manager_select_parent_folder">Select parent folder</string>
+    <string name="labels_manager_parent_folder_selected">
+        <b>Parent folder selected.</b> Tap to change</string>
+    <!-- endregion -->
+    <!-- region Parent Folder Picker -->
+    <string name="parent_picker_title">Parent folder</string>
+    <string name="parent_picker_header">If you do not select a parent folder, this new folder will be created as a top level folder.</string>
+    <string name="parent_picker_folder_icon_description">Folder icon</string>
+    <string name="parent_picker_parent_folder_icon_description">Folder with children icon</string>
+    <!-- endregion -->
     <!-- region Dialogs -->
     <string name="dialog_discard_changes_title">Henda breytingum?</string>
     <string name="dialog_discard_changes_message">Allar óvistaðar breytingar munu tapast.</string>
     <string name="discard">Henda</string>
-    <!-- end region -->
+    <!-- endregion -->
     <!-- region Old / V3 / pre-conventions -->
     <string name="protonmail">ProtonMail</string>
     <string name="encrypted_emails">DULRITAÐUR TÖLVUPÓSTUR</string>
@@ -121,6 +143,7 @@
     <string name="duplicate_email">Tölvupóstfang er tvítekið</string>
     <string name="invalid_code">Kóði er ekki gildur</string>
     <string name="message_drafted">Sending skilaboða mistókst. Skilaboðin eru vistuð í Drög-möppunni</string>
+    <string name="attachment_failed_message_drafted">Please remove and re-attach \"%s\" and send the message again. Your message can be found in the \"Drafts\" folder.</string>
     <string name="open_drawer">Opna</string>
     <string name="close_drawer">Loka</string>
     <string name="inbox_option">Innhólf</string>
@@ -384,7 +407,6 @@
     <string name="processing_attachment">Vinn með viðhengi</string>
     <string name="hyperlink_confirmation_dialog_text_html">Þú ert í þann mund að fara að ræsa vafrann og fara á:&lt;br/&gt;&lt;br/&gt;&lt;u&gt;%s&lt;/u&gt;&lt;br/&gt;&lt;br/&gt;Viltu halda áfram?</string>
     <string name="dont_ask_again">Ekki spyrja aftur</string>
-    <string name="x_none">Ekkert</string>
     <string name="changes_affected_after_closing">Breytingar munu taka gildi eftir að forritinu hefur verið lokað</string>
     <plurals name="incorrect_pin_remaining_attempts">
         <item quantity="one">Rangt PIN-númer, %d tilraun eftir</item>
@@ -394,7 +416,6 @@
         <item quantity="one">%d tilraun eftir þar til tækið verður hreinsað í öryggisskyni!</item>
         <item quantity="other">%d tilraunir eftir þar til tækið verður hreinsað í öryggisskyni!</item>
     </plurals>
-    <string name="x_done">Lokið</string>
     <string name="logout">Útskráning</string>
     <string name="log_out">Skrá út %s?</string>
     <string name="logout_question">Ertu viss að þú viljir skrá þig út?</string>
@@ -847,8 +868,6 @@
     <string name="labels_and_folders">Merkingar og möppur </string>
     <string name="folders">Möppur</string>
     <string name="labels">Merkingar</string>
-    <string name="labels_manager">Sýsla með merkingar</string>
-    <string name="folders_manage">Sýsla með möppur</string>
     <string name="swipe_actions">Aðgerðir við stroku</string>
     <string name="swipe_action_right">Strjúka til hægri</string>
     <string name="swipe_action_left">Strjúka til vinstri</string>
@@ -949,6 +968,7 @@
     <!-- endregion -->
     <string name="invalid_firebase_api_key_message">Ógildur API-kerfisviðmótslykill fyrir Firebase. Ýtitilkynningar munu ekki virka.</string>
     <string name="failed_saving_draft_online">Mistókst að vista netlægt drög að skilaboðum: \"%s\"</string>
+    <string name="failed_uploading_attachment_online">Attachment error for message: \"%s\"</string>
     <string name="cannot_open_message_while_being_sent">Get ekki opnað þessi skilaboð á meðan verið er að senda þau</string>
     <string name="enable_conversation_mode">Virkja samtalsham</string>
     <!-- endregion -->
