--- a/app/src/main/res/values-hu-rHU/strings.xml
+++ b/app/src/main/res/values-hu-rHU/strings.xml
@@ -23,10 +23,13 @@
     <string name="x_add_folder">Add folder</string>
     <string name="x_add_label">Add label</string>
     <string name="x_days">Nap</string>
+    <string name="x_done">Done</string>
+    <string name="x_edit">Edit</string>
     <string name="x_folders">Mappa</string>
     <string name="x_hours">Óra</string>
     <string name="x_labels">Címke</string>
     <string name="x_more">Továbbiak</string>
+    <string name="x_none">None</string>
     <string name="x_search">Keresés</string>
     <string name="x_set">Beállítás</string>
     <string name="x_0">0</string>
@@ -49,7 +52,7 @@
     <string name="composer_subject">Tárgy:</string>
     <string name="composer_to">Címzett:</string>
     <string name="set_msg_password_title">Jelszó beállítása</string>
-    <string name="set_msg_password_info">Állítson be egy jelszót, a nem ProtonMail címzettek számára küldött üzenet titkosításához. <a href="https://protonmail.com/support/knowledge-base/encrypt-for-outise-users/">További információk</a>
+    <string name="set_msg_password_info">Set a password to encrypt this message for non-protonmail users. <a href="https://protonmail.com/support/knowledge-base/encrypt-for-outside-users/">Learn more</a>
     </string>
     <string name="set_msg_password_info_icon_description">Infó</string>
     <string name="set_msg_password_msg_password_title">Üzenet jelszó</string>
@@ -73,6 +76,7 @@
     <string name="set_msg_expiration_check_description">Ez az elem ki van választva</string>
     <!-- endregion -->
     <!-- region Settings -->
+    <string name="settings_theme_title">Theme</string>
     <string name="settings_create_pin_code_title">Set PIN code</string>
     <string name="settings_confirm_pin_code_title">Repeat PIN code</string>
     <string name="settings_pins_dont_match">The PIN codes must match!</string>
@@ -80,11 +84,29 @@
     <string name="settings_swipe_settings_info">Set up swipe gestures to access most used actions.</string>
     <string name="settings_swipe_left_to_right">Left to right</string>
     <string name="settings_swipe_right_to_left">Right to left</string>
+    <!-- endregion -->
+    <!-- region App Theme -->
+    <string name="app_theme_title">App theme</string>
+    <string name="app_theme_light">Light</string>
+    <string name="app_theme_dark">Dark</string>
+    <string name="app_theme_system">System default</string>
+    <!-- endregion -->
+    <!-- region Labels Manger -->
+    <string name="labels_manager_select_parent_folder">Select parent folder</string>
+    <string name="labels_manager_parent_folder_selected">
+        <b>Parent folder selected.</b> Tap to change</string>
+    <!-- endregion -->
+    <!-- region Parent Folder Picker -->
+    <string name="parent_picker_title">Parent folder</string>
+    <string name="parent_picker_header">If you do not select a parent folder, this new folder will be created as a top level folder.</string>
+    <string name="parent_picker_folder_icon_description">Folder icon</string>
+    <string name="parent_picker_parent_folder_icon_description">Folder with children icon</string>
+    <!-- endregion -->
     <!-- region Dialogs -->
     <string name="dialog_discard_changes_title">Discard changes?</string>
     <string name="dialog_discard_changes_message">Any unsaved changes will be discarded.</string>
     <string name="discard">Discard</string>
-    <!-- end region -->
+    <!-- endregion -->
     <!-- region Old / V3 / pre-conventions -->
     <string name="protonmail">ProtonMail</string>
     <string name="encrypted_emails">TITKOSÍTOTT E-MAIL</string>
@@ -122,6 +144,7 @@ Svájci székhellyel</string>
     <string name="duplicate_email">A megadott e-mail cím már létezik</string>
     <string name="invalid_code">Érvénytelen kód</string>
     <string name="message_drafted">Az üzenet küldése sikertelen volt. A Piszkozatok mappában került mentésre.</string>
+    <string name="attachment_failed_message_drafted">Please remove and re-attach \"%s\" and send the message again. Your message can be found in the \"Drafts\" folder.</string>
     <string name="open_drawer">Megnyitás</string>
     <string name="close_drawer">Bezárás</string>
     <string name="inbox_option">Beérkezett üzenetek</string>
@@ -384,7 +407,6 @@ Svájci székhellyel</string>
     <string name="processing_attachment">Melléklet feldolgozása</string>
     <string name="hyperlink_confirmation_dialog_text_html">Megnyitja a következő címet a böngészőben:&lt;br/&gt;&lt;br/&gt;&lt;u&gt;%s&lt;/u&gt;&lt;br/&gt;&lt;br/&gt;Kívánja folytatni?</string>
     <string name="dont_ask_again">Don\'t ask again</string>
-    <string name="x_none">Egyik sem</string>
     <string name="changes_affected_after_closing">A módosítások az alkalmazás bezárása után lépnek életbe</string>
     <plurals name="incorrect_pin_remaining_attempts">
         <item quantity="one">Érvénytelen PIN, %d próbálkozás maradt</item>
@@ -394,7 +416,6 @@ Svájci székhellyel</string>
         <item quantity="one">%d próbálkozás az adattörlésig!</item>
         <item quantity="other">%d próbálkozás az adattörlésig!</item>
     </plurals>
-    <string name="x_done">Kész</string>
     <string name="logout">Kijelentkezés</string>
     <string name="log_out">Kijelentkezés %s?</string>
     <string name="logout_question">Biztos, hogy ki szeretne jelentkezni?</string>
@@ -849,8 +870,6 @@ Svájci székhellyel</string>
     <string name="labels_and_folders">Labels &amp; folders </string>
     <string name="folders">Mappák</string>
     <string name="labels">Címkék</string>
-    <string name="labels_manager">Labels manager</string>
-    <string name="folders_manage">Mappák kezelése</string>
     <string name="swipe_actions">Swipe actions</string>
     <string name="swipe_action_right">Csúsztatás jobbra</string>
     <string name="swipe_action_left">Csúsztatás balra</string>
@@ -951,6 +970,7 @@ Svájci székhellyel</string>
     <!-- endregion -->
     <string name="invalid_firebase_api_key_message">Helytelen Firebase API kulcs. A Push értesítések nem fognak működni.</string>
     <string name="failed_saving_draft_online">Hiba történt a piszkozat mentése közben: \"%s\"</string>
+    <string name="failed_uploading_attachment_online">Attachment error for message: \"%s\"</string>
     <string name="cannot_open_message_while_being_sent">Nem nyitható meg az üzenet, miközben elküldés alatt van</string>
     <string name="enable_conversation_mode">Beszélgetés engedélyezése</string>
     <!-- endregion -->
