--- a/app/src/main/res/values-kab/strings.xml
+++ b/app/src/main/res/values-kab/strings.xml
@@ -23,10 +23,13 @@
     <string name="x_add_folder">Rnu akaram</string>
     <string name="x_add_label">Rnu tabzimt</string>
     <string name="x_days">Ussan</string>
+    <string name="x_done">Done</string>
+    <string name="x_edit">Edit</string>
     <string name="x_folders">Ikaramen</string>
     <string name="x_hours">Isragen</string>
     <string name="x_labels">Tibzimin</string>
     <string name="x_more">Ugar</string>
+    <string name="x_none">None</string>
     <string name="x_search">Anadi</string>
     <string name="x_set">Sbadu</string>
     <string name="x_0">0</string>
@@ -49,7 +52,7 @@
     <string name="composer_subject">Asentel:</string>
     <string name="composer_to">Ɣer:</string>
     <string name="set_msg_password_title">Sbadu awal uffir</string>
-    <string name="set_msg_password_info">Sbadu awal uffir akken ad tewglehneḍ izen-agi i wid isseqdacen ara protonmail. <a href="https://protonmail.com/support/knowledge-base/encrypt-for-outise-users/">Issin ugar</a>
+    <string name="set_msg_password_info">Set a password to encrypt this message for non-protonmail users. <a href="https://protonmail.com/support/knowledge-base/encrypt-for-outside-users/">Learn more</a>
     </string>
     <string name="set_msg_password_info_icon_description">Talɣut</string>
     <string name="set_msg_password_msg_password_title">Awal n uffir n yizen</string>
@@ -73,6 +76,7 @@
     <string name="set_msg_expiration_check_description">Aferdis-agi yettwafren</string>
     <!-- endregion -->
     <!-- region Settings -->
+    <string name="settings_theme_title">Theme</string>
     <string name="settings_create_pin_code_title">Sbadu tangalt PIN</string>
     <string name="settings_confirm_pin_code_title">Ales tangalt PIN</string>
     <string name="settings_pins_dont_match">Tingalin PIN ilaq ad ilint kifkif!</string>
@@ -80,11 +84,29 @@
     <string name="settings_swipe_settings_info">Sbadu isillifen n uzuɣer akken ad tkecmeḍ ɣer tigawin i yettwaseqdacen s waṭas.</string>
     <string name="settings_swipe_left_to_right">Seg uzelmaḍ s ayeffus</string>
     <string name="settings_swipe_right_to_left">Seg uyeffus s azelmaḍ</string>
+    <!-- endregion -->
+    <!-- region App Theme -->
+    <string name="app_theme_title">App theme</string>
+    <string name="app_theme_light">Light</string>
+    <string name="app_theme_dark">Dark</string>
+    <string name="app_theme_system">System default</string>
+    <!-- endregion -->
+    <!-- region Labels Manger -->
+    <string name="labels_manager_select_parent_folder">Select parent folder</string>
+    <string name="labels_manager_parent_folder_selected">
+        <b>Parent folder selected.</b> Tap to change</string>
+    <!-- endregion -->
+    <!-- region Parent Folder Picker -->
+    <string name="parent_picker_title">Parent folder</string>
+    <string name="parent_picker_header">If you do not select a parent folder, this new folder will be created as a top level folder.</string>
+    <string name="parent_picker_folder_icon_description">Folder icon</string>
+    <string name="parent_picker_parent_folder_icon_description">Folder with children icon</string>
+    <!-- endregion -->
     <!-- region Dialogs -->
     <string name="dialog_discard_changes_title">Sefsex ibeddilen?</string>
     <string name="dialog_discard_changes_message">Ad ruḥen akk ibeddilen ur nettwasekles ara.</string>
     <string name="discard">Sefsex</string>
-    <!-- end region -->
+    <!-- endregion -->
     <!-- region Old / V3 / pre-conventions -->
     <string name="protonmail">ProtonMail</string>
     <string name="encrypted_emails">IMAYL YETTWAWGELHEN</string>
@@ -121,6 +143,7 @@
     <string name="duplicate_email">Tansa imayl tettusisleg</string>
     <string name="invalid_code">Tangalt mačči d tameɣtut</string>
     <string name="message_drafted">Tuzna n yizen ur teddi ara. Iznan-ik ttawskelsen deg ukaram n irewwayen.</string>
+    <string name="attachment_failed_message_drafted">Please remove and re-attach \"%s\" and send the message again. Your message can be found in the \"Drafts\" folder.</string>
     <string name="open_drawer">Ldi</string>
     <string name="close_drawer">Mdel</string>
     <string name="inbox_option">Tanaka N Urmas</string>
@@ -384,7 +407,6 @@
     <string name="processing_attachment">Asesfer n ufaylu yeddan</string>
     <string name="hyperlink_confirmation_dialog_text_html">Ad tsnekreḍ iminig web akken zd terzuḍ ɣer:&lt;br/&gt;&lt;br/&gt;&lt;u&gt;%s&lt;/u&gt;&lt;br/&gt;&lt;br/&gt; Tebɣiḍ ad tkemleḍ?</string>
     <string name="dont_ask_again">Ur ssutur ara tikelt-nniḍen</string>
-    <string name="x_none">Ula yiwen</string>
     <string name="changes_affected_after_closing">Abeddel ad d-yili seld amdal n usnas </string>
     <plurals name="incorrect_pin_remaining_attempts">
         <item quantity="one">Yir tangalt PIN,%d n uɛraḍ i d-yeqqimen</item>
@@ -394,7 +416,6 @@
         <item quantity="one">%d n uɛraḍ i d-yeqqimen arama d tukksa taɣelsant n isefka!</item>
         <item quantity="other">%d n uɛraḍ i d-yeqqimen arama d tukksa taɣelsant n isefka!</item>
     </plurals>
-    <string name="x_done">Immed</string>
     <string name="logout">Tuffɣa</string>
     <string name="log_out">Ad teffɣeḍ %s?</string>
     <string name="logout_question">Tebɣiḍ ad teffɣeḍ?</string>
@@ -849,8 +870,6 @@
     <string name="labels_and_folders">Tibzimin &amp; ikaramen </string>
     <string name="folders">Ikaramen</string>
     <string name="labels">Tibzimin</string>
-    <string name="labels_manager">Amsefrak n tibzimin</string>
-    <string name="folders_manage">Amsefrak n ikaramen</string>
     <string name="swipe_actions">Tigawin n uḍummu</string>
     <string name="swipe_action_right">Zuɣer ar tama tayeffust</string>
     <string name="swipe_action_left">Zuɣer s azelmaḍ</string>
@@ -951,6 +970,7 @@
     <!-- endregion -->
     <string name="invalid_firebase_api_key_message">Tasarut API i Firebase d mačči d tameɣtut. Ilɣuten push ur tteddun ara.</string>
     <string name="failed_saving_draft_online">Yecceḍ usekles n urewway deg uẓeṭṭa i yizen: \"%s\"</string>
+    <string name="failed_uploading_attachment_online">Attachment error for message: \"%s\"</string>
     <string name="cannot_open_message_while_being_sent">Ur izmir ara ad ildi izen-a mi ara yettwazen</string>
     <string name="enable_conversation_mode">Rmed askar n udiwenni</string>
     <!-- endregion -->
