--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -23,10 +23,13 @@
     <string name="x_add_folder">Map toevoegen</string>
     <string name="x_add_label">Label toevoegen</string>
     <string name="x_days">Dagen</string>
+    <string name="x_done">Klaar</string>
+    <string name="x_edit">Edit</string>
     <string name="x_folders">Mappen</string>
     <string name="x_hours">Uren</string>
     <string name="x_labels">Labels</string>
     <string name="x_more">Meer</string>
+    <string name="x_none">Geen</string>
     <string name="x_search">Zoeken</string>
     <string name="x_set">Instellen</string>
     <string name="x_0">0</string>
@@ -49,7 +52,7 @@
     <string name="composer_subject">Onderwerp:</string>
     <string name="composer_to">Aan:</string>
     <string name="set_msg_password_title">Wachtwoord instellen</string>
-    <string name="set_msg_password_info">Stel een wachtwoord in om dit bericht te versleutelen. <a href="https://protonmail.com/support/knowledge-base/encrypt-for-outise-users/">Meer informatie</a>
+    <string name="set_msg_password_info">Stel een wachtwoord in om dit bericht te versleutelen. <a href="https://protonmail.com/support/knowledge-base/encrypt-for-outside-users/">Meer informatie</a>
     </string>
     <string name="set_msg_password_info_icon_description">Info</string>
     <string name="set_msg_password_msg_password_title">Wachtwoord van bericht</string>
@@ -73,6 +76,7 @@
     <string name="set_msg_expiration_check_description">Dit item is gecontroleerd</string>
     <!-- endregion -->
     <!-- region Settings -->
+    <string name="settings_theme_title">Thema</string>
     <string name="settings_create_pin_code_title">PIN-code instellen</string>
     <string name="settings_confirm_pin_code_title">Herhaal PIN-code</string>
     <string name="settings_pins_dont_match">De pincodes moeten overeen komen!</string>
@@ -80,11 +84,29 @@
     <string name="settings_swipe_settings_info">Stel veeg gebaren in om toegang te krijgen tot de meest gebruikte acties.</string>
     <string name="settings_swipe_left_to_right">Links naar rechts</string>
     <string name="settings_swipe_right_to_left">Van rechts naar links</string>
+    <!-- endregion -->
+    <!-- region App Theme -->
+    <string name="app_theme_title">App-thema</string>
+    <string name="app_theme_light">Licht</string>
+    <string name="app_theme_dark">Donker</string>
+    <string name="app_theme_system">Systeemstandaard</string>
+    <!-- endregion -->
+    <!-- region Labels Manger -->
+    <string name="labels_manager_select_parent_folder">Kies bovenliggende map</string>
+    <string name="labels_manager_parent_folder_selected">
+        <b>Bovenliggende map gekozen.</b>Tik om te wijzigen</string>
+    <!-- endregion -->
+    <!-- region Parent Folder Picker -->
+    <string name="parent_picker_title">Bovenliggende map</string>
+    <string name="parent_picker_header">Als u geen bovenliggende map selecteert, wordt deze nieuwe map aangemaakt als een map op het hoogste niveau.</string>
+    <string name="parent_picker_folder_icon_description">Map pictogram</string>
+    <string name="parent_picker_parent_folder_icon_description">Map met onderliggend pictogram</string>
+    <!-- endregion -->
     <!-- region Dialogs -->
     <string name="dialog_discard_changes_title">Wijzigingen negeren?</string>
     <string name="dialog_discard_changes_message">Alle niet-opgeslagen wijzigingen worden ongedaan gemaakt.</string>
     <string name="discard">Verwijderen</string>
-    <!-- end region -->
+    <!-- endregion -->
     <!-- region Old / V3 / pre-conventions -->
     <string name="protonmail">ProtonMail</string>
     <string name="encrypted_emails">VERSLEUTELDE E-MAIL</string>
@@ -121,6 +143,7 @@
     <string name="duplicate_email">E-mailadres bestaat al</string>
     <string name="invalid_code">Code is ongeldig</string>
     <string name="message_drafted">Verzenden van bericht is mislukt. Bericht is opgeslagen als concept.</string>
+    <string name="attachment_failed_message_drafted">Verwijder \"%s\", voeg het opnieuw bij en verzend het bericht opnieuw. U kunt uw bericht vinden in de map \"Concepten\".</string>
     <string name="open_drawer">Open</string>
     <string name="close_drawer">Sluiten</string>
     <string name="inbox_option">Inbox</string>
@@ -384,7 +407,6 @@
     <string name="processing_attachment">Bijlage verwerken</string>
     <string name="hyperlink_confirmation_dialog_text_html">U staat op het punt om de webbrowser te starten en te navigeren naar:&lt;br/&gt;&lt;br/&gt;&lt;u&gt;%s&lt;/u&gt;&lt;br/&gt;&lt;br/&gt;Wilt u doorgaan?</string>
     <string name="dont_ask_again">Niet opnieuw vragen</string>
-    <string name="x_none">Geen</string>
     <string name="changes_affected_after_closing">Wijzigingen worden van kracht na het sluiten van de app</string>
     <plurals name="incorrect_pin_remaining_attempts">
         <item quantity="one">Onjuiste PIN-code, %d poging resterend</item>
@@ -394,7 +416,6 @@
         <item quantity="one">%d poging tot het vernietigen van alle gegevens!</item>
         <item quantity="other">%d pogingen tot het vernietigen van alle gegevens!</item>
     </plurals>
-    <string name="x_done">Klaar</string>
     <string name="logout">Afmelden</string>
     <string name="log_out">%s uitloggen?</string>
     <string name="logout_question">Weet u zeker dat u wilt uitloggen?</string>
@@ -849,8 +870,6 @@
     <string name="labels_and_folders">Labels &amp; mappen </string>
     <string name="folders">Mappen</string>
     <string name="labels">Labels</string>
-    <string name="labels_manager">Labels beheren</string>
-    <string name="folders_manage">Mappen beheren</string>
     <string name="swipe_actions">Veegacties</string>
     <string name="swipe_action_right">Naar rechts vegen</string>
     <string name="swipe_action_left">Naar links vegen</string>
@@ -951,6 +970,7 @@
     <!-- endregion -->
     <string name="invalid_firebase_api_key_message">Ongeldige Firebase API-sleutel. Push-meldingen werken niet.</string>
     <string name="failed_saving_draft_online">Onlin concept opslaan voor bericht mislukt: \"%s\"</string>
+    <string name="failed_uploading_attachment_online">Fout in bijlage voor bericht: \"%s\"</string>
     <string name="cannot_open_message_while_being_sent">Kan dit bericht niet openen terwijl het verzonden wordt</string>
     <string name="enable_conversation_mode">Gespreksmodus inschakelen</string>
     <!-- endregion -->
