--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -23,10 +23,13 @@
     <string name="x_add_folder">Add folder</string>
     <string name="x_add_label">Add label</string>
     <string name="x_days">Dias</string>
+    <string name="x_done">Done</string>
+    <string name="x_edit">Edit</string>
     <string name="x_folders">Pastas</string>
     <string name="x_hours">Horas</string>
     <string name="x_labels">Etiquetas</string>
     <string name="x_more">Mais</string>
+    <string name="x_none">None</string>
     <string name="x_search">Procurar</string>
     <string name="x_set">Definir</string>
     <string name="x_0">0</string>
@@ -49,7 +52,7 @@
     <string name="composer_subject">Assunto:</string>
     <string name="composer_to">Para:</string>
     <string name="set_msg_password_title">Definir senha</string>
-    <string name="set_msg_password_info">Defina uma senha para encriptar esta mensagem para utilizadores não-protonmail. <a href="https://protonmail.com/support/knowledge-base/encrypt-for-outise-users/">Saiba mais</a>
+    <string name="set_msg_password_info">Set a password to encrypt this message for non-protonmail users. <a href="https://protonmail.com/support/knowledge-base/encrypt-for-outside-users/">Learn more</a>
     </string>
     <string name="set_msg_password_info_icon_description">Informação</string>
     <string name="set_msg_password_msg_password_title">Senha da mensagem</string>
@@ -73,6 +76,7 @@
     <string name="set_msg_expiration_check_description">Este item está verificado</string>
     <!-- endregion -->
     <!-- region Settings -->
+    <string name="settings_theme_title">Theme</string>
     <string name="settings_create_pin_code_title">Definir código PIN</string>
     <string name="settings_confirm_pin_code_title">Repetir o código PIN</string>
     <string name="settings_pins_dont_match">Os códigos PIN têm de ser iguais!</string>
@@ -80,11 +84,29 @@
     <string name="settings_swipe_settings_info">Configure gestos de deslize para aceder às acções mais usadas.</string>
     <string name="settings_swipe_left_to_right">Da esquerda para a direita</string>
     <string name="settings_swipe_right_to_left">Da direita para a esquerda</string>
+    <!-- endregion -->
+    <!-- region App Theme -->
+    <string name="app_theme_title">App theme</string>
+    <string name="app_theme_light">Light</string>
+    <string name="app_theme_dark">Dark</string>
+    <string name="app_theme_system">System default</string>
+    <!-- endregion -->
+    <!-- region Labels Manger -->
+    <string name="labels_manager_select_parent_folder">Select parent folder</string>
+    <string name="labels_manager_parent_folder_selected">
+        <b>Parent folder selected.</b> Tap to change</string>
+    <!-- endregion -->
+    <!-- region Parent Folder Picker -->
+    <string name="parent_picker_title">Parent folder</string>
+    <string name="parent_picker_header">If you do not select a parent folder, this new folder will be created as a top level folder.</string>
+    <string name="parent_picker_folder_icon_description">Folder icon</string>
+    <string name="parent_picker_parent_folder_icon_description">Folder with children icon</string>
+    <!-- endregion -->
     <!-- region Dialogs -->
     <string name="dialog_discard_changes_title">Descartar alterações?</string>
     <string name="dialog_discard_changes_message">Quaisquer alterações por gravar serão descartadas.</string>
     <string name="discard">Descartar</string>
-    <!-- end region -->
+    <!-- endregion -->
     <!-- region Old / V3 / pre-conventions -->
     <string name="protonmail">ProtonMail</string>
     <string name="encrypted_emails">EMAIL ENCRIPTADO</string>
@@ -121,6 +143,7 @@
     <string name="duplicate_email">O endereço de email é um duplicado</string>
     <string name="invalid_code">Código inválido</string>
     <string name="message_drafted">O envio da mensagem falhou. As suas mensagens foram gravadas na pasta Rascunhos</string>
+    <string name="attachment_failed_message_drafted">Please remove and re-attach \"%s\" and send the message again. Your message can be found in the \"Drafts\" folder.</string>
     <string name="open_drawer">Abrir</string>
     <string name="close_drawer">Fechar</string>
     <string name="inbox_option">Caixa de entrada</string>
@@ -383,7 +406,6 @@
     <string name="processing_attachment">A processar o anexo</string>
     <string name="hyperlink_confirmation_dialog_text_html">Está prestes a abrir o navegador na página: &lt;br/&gt;&lt;br/&gt;&lt;u&gt;%s&lt;/u&gt;&lt;br/&gt;&lt;br/&gt;Deseja continuar?</string>
     <string name="dont_ask_again">Não perguntar novamente</string>
-    <string name="x_none">Nenhum</string>
     <string name="changes_affected_after_closing">As alterações terão efeito após fechar a aplicação</string>
     <plurals name="incorrect_pin_remaining_attempts">
         <item quantity="one">PIN incorrecto, resta %d tentativa</item>
@@ -393,7 +415,6 @@
         <item quantity="one">%d tentativa até à limpeza segura dos dados!</item>
         <item quantity="other">%d tentativas até à limpeza segura dos dados!</item>
     </plurals>
-    <string name="x_done">Concluído</string>
     <string name="logout">Terminar sessão</string>
     <string name="log_out">Terminar sessão em %s?</string>
     <string name="logout_question">Tem certeza de que deseja encerrar a sessão?</string>
@@ -848,8 +869,6 @@
     <string name="labels_and_folders">Labels &amp; folders </string>
     <string name="folders">Pastas</string>
     <string name="labels">Etiquetas</string>
-    <string name="labels_manager">Gestor de etiquetas</string>
-    <string name="folders_manage">Gestor de pastas</string>
     <string name="swipe_actions">Acções ao deslizar</string>
     <string name="swipe_action_right">Deslizar à direita</string>
     <string name="swipe_action_left">Deslizar à esquerda</string>
@@ -950,6 +969,7 @@
     <!-- endregion -->
     <string name="invalid_firebase_api_key_message">Chave API do Firebase inválida. As notificações push não funcionarão.</string>
     <string name="failed_saving_draft_online">Falha ao gravar o rascunho online da mensagem: \"%s\"</string>
+    <string name="failed_uploading_attachment_online">Attachment error for message: \"%s\"</string>
     <string name="cannot_open_message_while_being_sent">Impossível abrir esta mensagem durante o envio</string>
     <string name="enable_conversation_mode">Activar modo de conversa</string>
     <!-- endregion -->
