--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -20,13 +20,16 @@
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
     <!-- region All -->
     <string name="x_app_version_name_code">ProtonMail %s (%d)</string>
-    <string name="x_add_folder">Add folder</string>
-    <string name="x_add_label">Add label</string>
+    <string name="x_add_folder">添加文件夹</string>
+    <string name="x_add_label">添加标签</string>
     <string name="x_days">天</string>
+    <string name="x_done">完成</string>
+    <string name="x_edit">编辑</string>
     <string name="x_folders">文件夹</string>
     <string name="x_hours">小时</string>
     <string name="x_labels">标签</string>
     <string name="x_more">更多</string>
+    <string name="x_none">无</string>
     <string name="x_search">搜索</string>
     <string name="x_set">设置</string>
     <string name="x_0">0</string>
@@ -38,8 +41,8 @@
     <string name="drawer_settings">设置</string>
     <string name="drawer_subscription">账户等级</string>
     <string name="drawer_sign_out">退出账户</string>
-    <string name="drawer_create_folder_description">Create new folder</string>
-    <string name="drawer_create_label_description">Create new label</string>
+    <string name="drawer_create_folder_description">新建文件夹</string>
+    <string name="drawer_create_label_description">新建标签</string>
     <!-- endregion -->
     <!-- region Composer -->
     <string name="composer_bcc">密送：</string>
@@ -49,7 +52,7 @@
     <string name="composer_subject">主题：</string>
     <string name="composer_to">收件人：</string>
     <string name="set_msg_password_title">设置密码</string>
-    <string name="set_msg_password_info">请为非 ProtonMail 用户设置密码将邮件加密。<a href="https://protonmail.com/support/knowledge-base/encrypt-for-outise-users/">了解详情</a>
+    <string name="set_msg_password_info">请为非 ProtonMail 用户设置密码将邮件加密，<a href="https://protonmail.com/support/knowledge-base/encrypt-for-outside-users/">了解详情</a>
     </string>
     <string name="set_msg_password_info_icon_description">信息</string>
     <string name="set_msg_password_msg_password_title">邮件密码</string>
@@ -73,6 +76,7 @@
     <string name="set_msg_expiration_check_description">已勾选该项</string>
     <!-- endregion -->
     <!-- region Settings -->
+    <string name="settings_theme_title">主题</string>
     <string name="settings_create_pin_code_title">设置口令</string>
     <string name="settings_confirm_pin_code_title">再次输入口令</string>
     <string name="settings_pins_dont_match">两次输入的口令必须一致！</string>
@@ -80,11 +84,29 @@
     <string name="settings_swipe_settings_info">设置滑动手势来执行常用操作。</string>
     <string name="settings_swipe_left_to_right">从左向右</string>
     <string name="settings_swipe_right_to_left">从右向左</string>
+    <!-- endregion -->
+    <!-- region App Theme -->
+    <string name="app_theme_title">应用主题</string>
+    <string name="app_theme_light">浅色</string>
+    <string name="app_theme_dark">深色</string>
+    <string name="app_theme_system">跟随系统</string>
+    <!-- endregion -->
+    <!-- region Labels Manger -->
+    <string name="labels_manager_select_parent_folder">选择父文件夹</string>
+    <string name="labels_manager_parent_folder_selected">
+        <b>已选定父文件夹，</b>轻触更改</string>
+    <!-- endregion -->
+    <!-- region Parent Folder Picker -->
+    <string name="parent_picker_title">父文件夹</string>
+    <string name="parent_picker_header">If you do not select a parent folder, this new folder will be created as a top level folder.</string>
+    <string name="parent_picker_folder_icon_description">Folder icon</string>
+    <string name="parent_picker_parent_folder_icon_description">Folder with children icon</string>
+    <!-- endregion -->
     <!-- region Dialogs -->
     <string name="dialog_discard_changes_title">确定要放弃更改吗？</string>
     <string name="dialog_discard_changes_message">所有未保存的更改都将丢失。</string>
     <string name="discard">放弃更改</string>
-    <!-- end region -->
+    <!-- endregion -->
     <!-- region Old / V3 / pre-conventions -->
     <string name="protonmail">ProtonMail</string>
     <string name="encrypted_emails">加密邮件</string>
@@ -121,6 +143,7 @@
     <string name="duplicate_email">邮箱地址重复</string>
     <string name="invalid_code">验证码错误</string>
     <string name="message_drafted">邮件发送失败，已存为草稿</string>
+    <string name="attachment_failed_message_drafted">Please remove and re-attach \"%s\" and send the message again. Your message can be found in the \"Drafts\" folder.</string>
     <string name="open_drawer">打开</string>
     <string name="close_drawer">关闭</string>
     <string name="inbox_option">收件箱</string>
@@ -376,7 +399,6 @@
     <string name="processing_attachment">正在处理附件</string>
     <string name="hyperlink_confirmation_dialog_text_html">您即将在浏览器中打开：&lt;br/&gt;&lt;br/&gt;&lt;u&gt;%s&lt;/u&gt;&lt;br/&gt;&lt;br/&gt;确定要继续吗？</string>
     <string name="dont_ask_again">不再询问</string>
-    <string name="x_none">无</string>
     <string name="changes_affected_after_closing">所作更改将在程序退出后生效</string>
     <plurals name="incorrect_pin_remaining_attempts">
         <item quantity="other">口令错误，还可尝试 %d 次</item>
@@ -384,7 +406,6 @@
     <plurals name="incorrect_pin_remaining_attempts_wipe">
         <item quantity="other">若再输错 %d 次数据将被清除！</item>
     </plurals>
-    <string name="x_done">完成</string>
     <string name="logout">退出账户</string>
     <string name="log_out">退出账户 %s？</string>
     <string name="logout_question">确定要退出账户吗？</string>
@@ -825,8 +846,6 @@
     <string name="labels_and_folders">标签和文件夹</string>
     <string name="folders">文件夹</string>
     <string name="labels">标签</string>
-    <string name="labels_manager">标签管理</string>
-    <string name="folders_manage">文件夹管理</string>
     <string name="swipe_actions">滑动操作</string>
     <string name="swipe_action_right">向右滑动</string>
     <string name="swipe_action_left">向左滑动</string>
@@ -923,6 +942,7 @@
     <!-- endregion -->
     <string name="invalid_firebase_api_key_message">无效的 Firebase API 密钥。推送通知将无法使用。</string>
     <string name="failed_saving_draft_online">未能在线保存邮件“%s”的草稿</string>
+    <string name="failed_uploading_attachment_online">Attachment error for message: \"%s\"</string>
     <string name="cannot_open_message_while_being_sent">此邮件正在发送中，不能打开</string>
     <string name="enable_conversation_mode">启用对话模式</string>
     <!-- endregion -->
